# IEEE-Dry-Runs-Green-Insights-2025

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  requirements.txt
data/: README.md
data/mainframe/: README.md  pyproject.toml
data/mainframe/analysis/: analysis_functions.py  comparison_analysis.ipynb  complete-analysis.ipynb  dev_comparison_analysis.ipynb  tapo-analysis-conf-1.ipynb  tapo-analysis-conf-2.ipynb  tapo-analysis-conf-3.ipynb  tapo-analysis-conf-4.ipynb  tapo-analysis-conf-5-initial.ipynb  tapo-analysis-conf-5.ipynb  tapo-analysis-conf-6-initial.ipynb  tapo-analysis-conf-6.ipynb  tapo-analysis-initial.ipynb
data/mainframe/data/carbontracker/: final_results.csv  final_results_details.csv
data/mainframe/data/carbontracker/conf-1/: power-run1.xls  power-run2-filtered.xls  power-run2.xls  power-run3-filtered.xls  power-run3.xls
data/mainframe/data/carbontracker/conf-1/bad_data/: power-run4.xls
data/mainframe/data/carbontracker/conf-2/: power-run1-filtered.xls  power-run1.xls  power-run2-filtered.xls  power-run3.xls  power-run4-filtered.xls
data/mainframe/data/carbontracker/conf-2/bad_data/: power-run4.xls
data/mainframe/data/carbontracker/conf-3/: power-run1.xls  power-run2.xls  power-run3.xls  power-run4.xls
data/mainframe/data/carbontracker/conf-4/: power-run1.xls  power-run2.xls  power-run4.xls
data/mainframe/data/carbontracker/conf-5/: power-run1.xls  power-run2.xls  power-run3.xls  power-run4.xls
data/mainframe/data/carbontracker/conf-6/: power-run1.xls  power-run2.xls  power-run3.xls  power-run4.xls
(+44 files in other folders)
